// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withAuth Logged 1`] = `
<div>
  <h2>
    Home page
  </h2>
</div>
`;

exports[`withAuth Need login 1`] = `
<div>
  <h2>
    Login page
  </h2>
</div>
`;
